// Copyright 2023 Intrinsic Innovation LLC
// Intrinsic Proprietary and Confidential
// Provided subject to written agreement between the parties.

syntax = "proto3";

package intrinsic_proto.icon;

message JointPositionPidTorqueControllerConfig {
  // Proportional gain for the controller.
  double kp = 1;
  // Integral gain for the controller. This only takes effect when the
  // absolute position error is below integration_enable_range.
  double ki = 2;
  // Derivative gain for the controller.
  double kd = 3;
  // Maximum permissible torque. This must be positive and the output will be
  // clamped to this value.
  double max_torque = 4;
  // Value between 0 and 1 determining the velocity smoothing. Higher value
  // corresponds to less smoothing.
  double alpha = 5;
  // The maximum absolute change in torque between timesteps. The change in
  // torque between timesteps will be clamped to this amount.
  double max_torque_delta_per_timestep = 6;
  // The maximum contribution to the target torque from the integral term. The
  // magnitude will be clamped to this value.
  double max_integral_torque = 7;
  // The length of rolling window for which the integral term is evaluated in
  // seconds.
  double integration_window_seconds = 8;
  // The maximum absolute position error for which the integral term is used.
  double integration_enable_range = 9;
  // The timestep between measurements, used to scale the integral term.
  double timestep = 10;
}

message ArmPositionPidTorqueControllerConfig {
  repeated JointPositionPidTorqueControllerConfig joint_configs = 1;
}
